--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,18 @@
 run:
-  timeout: 5m
-  allow-parallel-runners: true
+  timeout: 10m
+  # If set we pass it to "go list -mod={option}". From "go help modules":
+  # If invoked with -mod=readonly, the go command is disallowed from the implicit
+  # automatic updating of go.mod described above. Instead, it fails when any changes
+  # to go.mod are needed. This setting is most useful to check that go.mod does
+  # not need updates, such as in a continuous integration and testing system.
+  # If invoked with -mod=vendor, the go command assumes that the vendor
+  # directory holds the correct copies of dependencies and ignores
+  # the dependency descriptions in go.mod.
+  #
+  # Allowed values: readonly|vendor|mod
+  # By default, it isn't set.
+  modules-download-mode: readonly
+  tests: false
 
 issues:
   # don't skip warning about doc comments
@@ -16,32 +28,114 @@ issues:
       linters:
         - dupl
         - lll
+    - path: "test/*"
+      linters:
+        - gosec
+        - revive
+        - errcheck
+
 linters:
   disable-all: true
   enable:
-    - dupl
+    - asasalint
+    - asciicheck
+    - bidichk
+    - bodyclose
+    - containedctx
+    - contextcheck
+    - copyloopvar
+    - decorder
+    - dogsled
+    - durationcheck
     - errcheck
-    - exportloopref
+    - errchkjson
+    - errname
+    - fatcontext
+    - funlen
     - ginkgolinter
     - goconst
+    - gocritic
     - gocyclo
     - gofmt
+    - gofumpt
+    - goheader
     - goimports
+    - gomodguard
+    - goprintffuncname
+    - gosec
     - gosimple
     - govet
+    - grouper
+    - importas
     - ineffassign
+    - interfacebloat
+    - intrange
     - lll
+    - loggercheck
+    - maintidx
+    - makezero
     - misspell
     - nakedret
+    - nilerr
+    - nilnil
+    - noctx
+    - nolintlint
+    - nosprintfhostport
     - prealloc
+    - predeclared
+    - promlinter
+    - reassign
     - revive
+    - rowserrcheck
+    - sloglint
     - staticcheck
+    - stylecheck
+    - tagalign
+    - tenv
+    - thelper
+    - tparallel
     - typecheck
     - unconvert
     - unparam
     - unused
+    - usestdlibvars
+    - wastedassign
+    - whitespace
 
 linters-settings:
+  funlen:
+    lines: 120
+    statements: 55
+  goconst:
+    min-len: 2
+    min-occurrences: 2
+  gocyclo:
+    min-complexity: 30
+  goimports:
+    local-prefixes: github.com/Mellanox/spectrum-x-operator
+  lll:
+    line-length: 120
+  misspell:
+    locale: US
+  stylecheck:
+    checks: ["all", "-ST1000"]
+    dot-import-whitelist:
+      - github.com/onsi/ginkgo/v2
+      - github.com/onsi/ginkgo/v2/extensions/table
+      - github.com/onsi/gomega
+      - github.com/onsi/gomega/gstruct
+  gocritic:
+    disabled-checks:
+      - appendAssign
+  ireturn:
+    allow:
+      - anon
+      - error
+      - empty
+      - stdlib
   revive:
     rules:
-      - name: comment-spacings
+      - name: package-comments
+        severity: warning
+        disabled: true
+        exclude: [""]
