--- a/config/rbac/spectrumxconfig_viewer_role.yaml
+++ b/config/rbac/spectrumxconfig_viewer_role.yaml
@@ -1,32 +1,23 @@
----
+# permissions for end users to view spectrumxconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  labels:
+    app.kubernetes.io/name: spectrum-x-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: spectrumxconfig-viewer-role
 rules:
 - apiGroups:
   - spectrumx.nvidia.com
   resources:
   - spectrumxconfigs
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
-- apiGroups:
-  - spectrumx.nvidia.com
-  resources:
-  - spectrumxconfigs/finalizers
-  verbs:
-  - update
 - apiGroups:
   - spectrumx.nvidia.com
   resources:
   - spectrumxconfigs/status
   verbs:
   - get
-  - patch
-  - update
