feat: handle IPs on internal OVS port
- Move internal OVS port to Admin Up
- Add P2P GW IP address to internal OVS port
- Move IP from physical port to internal OVS port

Signed-off-by: Fred Rolland <frolland@nvidia.com>

--- a/config/flowcontroller/daemonset.yaml
+++ b/config/flowcontroller/daemonset.yaml
@@ -19,6 +19,7 @@ spec:
       labels:
         control-plane: flowcontroller
     spec:
+      hostNetwork: true
       securityContext:
         runAsNonRoot: false
       containers:
