chore: add Openshift deploy target
Signed-off-by: Fred Rolland <frolland@nvidia.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -11,16 +11,21 @@ rules:
   verbs:
   - update
 - apiGroups:
-  - ""
+  - coordination.k8s.io
   resources:
-  - configmaps
+  - leases
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - ""
   resources:
+  - configmaps
   - pods
   verbs:
   - create
