--- a/config/flowcontroller/kustomization.yaml
+++ b/config/flowcontroller/kustomization.yaml
@@ -1,2 +1,8 @@
 resources:
 - daemonset.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: harbor.mellanox.com/cloud-orchestration-dev/frolland/specx
+  newTag: nosriov
