--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,9 @@ variables: # additional variables defined at the gitlab group scope
     - type/docker
   services:
     - docker:24-dind
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^network-operator-.*$/'
+    - if: '$CI_COMMIT_BRANCH =~ /^network-operator-.*$/'
   image: docker:24
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
@@ -161,6 +164,8 @@ update-component-version-in-network-operator:
   tags:
     - os/linux
     - type/docker
+  rules:
+    - if: '$CI_COMMIT_BRANCH =~ /^network-operator-.*$/'
   image: golang:1-alpine
   variables:  # additional variables defined at the gitlab group scope
     GITHUB_EMAIL: svc-cloud-orch-gh@nvidia.com
@@ -226,6 +231,8 @@ pulse-scan-oss-operator:
   tags:
     - os/linux
     - type/docker
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^network-operator-.*$/'
   variables:
     SSA_CLIENT_ID: $SSA_CLIENT_ID_PULSE_OSS
     SSA_CLIENT_SECRET: $SSA_CLIENT_SECRET_PULSE_OSS
@@ -249,7 +256,6 @@ pulse-scan-stig-operator:
     - docker:24-dind
   rules:
     - if: '$CI_COMMIT_TAG =~ /^network-operator-.*$/'
-    - if: '$CI_COMMIT_BRANCH =~ /^network-operator-.*$/'
   variables:
     SSA_CLIENT_ID: $SSA_CLIENT_ID_PULSE_STIG
     SSA_CLIENT_SECRET: $SSA_CLIENT_SECRET_PULSE_STIG
@@ -268,6 +274,8 @@ pulse-scan-oss-operator-rhel:
   tags:
     - os/linux
     - type/docker
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^network-operator-.*$/'
   variables:
     SSA_CLIENT_ID: $SSA_CLIENT_ID_PULSE_OSS
     SSA_CLIENT_SECRET: $SSA_CLIENT_SECRET_PULSE_OSS
@@ -291,7 +299,6 @@ pulse-scan-stig-operator-rhel:
     - docker:24-dind
   rules:
     - if: '$CI_COMMIT_TAG =~ /^network-operator-.*$/'
-    - if: '$CI_COMMIT_BRANCH =~ /^network-operator-.*$/'
   variables:
     SSA_CLIENT_ID: $SSA_CLIENT_ID_PULSE_STIG
     SSA_CLIENT_SECRET: $SSA_CLIENT_SECRET_PULSE_STIG
