--- a/Dockerfile.stig-rhel
+++ b/Dockerfile.stig-rhel
@@ -40,7 +40,8 @@ COPY ./ ./
 # was called. For example, if we call make docker-build in a local env which has the Apple Silicon M1 SO
 # the docker BUILDPLATFORM arg will be linux/arm64 when for Apple x86 it will be linux/amd64. Therefore,
 # by leaving it empty we can ensure that the container and binary shipped on it will have the same platform.
-RUN --mount=type=cache,target=/go/pkg/mod/ GO_GCFLAGS=${GCFLAGS} make build
+RUN --mount=type=cache,target=/go/pkg/mod/ GO_GCFLAGS=${GCFLAGS} make build && \
+    rm -rf .git pulse-scan-policies
 
 FROM $RHEL_STIG_BASE_IMAGE
 
